# data-warehouse-advanced

./: .project  README.md  pnpm-lock.yaml
.dbeaver/: credentials-config.json  data-sources.json  project-settings.json
.moon/: toolchain.yml  workspace.yml
data-pipeline/: .env.example  README.md  pyproject.toml
data-pipeline/dlt_project/: load_csv_sources.py  moon.yml  requirements.txt
data-pipeline/dlt_project/.dlt/: config.toml
data-pipeline/dlt_project/sources/: Customer.csv  Employee.csv  OrderDetails.csv  Orders.csv  Product.csv  Region.csv  Warehouse.csv
data-pipeline/eda/: staging_products.ipynb
data-pipeline/sqlmesh_project/: config.yaml  moon.yml
data-pipeline/sqlmesh_project/models/mart/: dim_dates.sql  dim_products.sql
docker/: compose-metabase.yaml  compose.yaml
docs/: SETUP-METABASE.md  data-warehouse.drawio
