[project]
name = "data-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dlt[clickhouse,postgres]>=1.15.0",
    "sqlmesh[clickhouse]>=0.211.2",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "jupysql>=0.11.1",
    "sqlmesh[lsp,web]>=0.211.2",
]
